[package]
name = "urg-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bstr = "1.0.1"

[dev-dependencies]
log = "0.4.17"
serde = { version = "1.0.148", features = ["derive"] }
simple_logger = "4.0.0"
toml = "0.5.9"
